Есть что еще допилить

--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -22,7 +22,7 @@
         }
         else
         {
-            <div class="userId" style="color:white; background:#42AAFF">
+            <div class="userId" style="color:white; width:350px; background:#42AAFF">
                 <span> Вы вошли под пользователем - "@_nameUser"</span>
                 <br/>
                 <span> userId - "@_userId" </span>
@@ -31,7 +31,7 @@
                
                 <br/>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
-            <button style="background:#18db66; width:400px; font-size:20px" class="glow-on-hover" @onclick="(()=>ChangePasswordUser((int)_userId!))"> Изменить пароль пользователя "@_nameUser" </button>
+            <button style="background:#18db66; width:500px; font-size:20px" class="glow-on-hover" @onclick="(()=>ChangePasswordUser((int)_userId!))"> Изменить пароль пользователя "@_nameUser" </button>
                 </div>
                 <h2 style="color:blueviolet; font-style:oblique">Список аккаунтов:</h2>
                 <table class="table_dark">
@@ -56,11 +56,10 @@
                                 <td>@account.Login</td>
                                 @if (flag && accountId == account.Id)
                                 {                                    
-                                   <td>@passwordEncryptor.Decrypt(account.Password);</td>
+                                   <td>@passwordEncryptor.Decrypt(account.Password)</td>
                                     <td>
                                         <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Скрыть пароль</button>
                                     </td>
-                                    
                                 }
                                 else
                                 {
@@ -72,14 +71,14 @@
                                 <td>
                                     <button style="background:#1b6ec2" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
                                 </td>
-                                <td>
-                                    <select @bind="selectedNumber" placeholder="6">
-                                        @for (int i = 6; i < 16; i++)
-                                        {
-                                            <option> @i</option>
-                                        }
-                                    </select>
-                                </td>
+                                    <td>
+                                        <select @bind="selectedNumber" placeholder="6">
+                                            @for (int i = 6; i < 16; i++)
+                                            {
+                                                <option> @i</option>
+                                            }
+                                        </select>
+                                    </td>
                                 <td>
                             <Button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>DeleteAccount(account))">Удалить</Button>
                                 </td>
@@ -136,6 +135,7 @@
     private bool isConnected;
     private bool checkedValue;
     private List<Account>  arrAccountsDelete = new List<Account>();
+
     protected override async void OnInitialized()
     {
         accounts = await _listAccounts.GetAccounts();
@@ -176,7 +176,7 @@
     {        
         if (selectedNumber == 0)
             selectedNumber = 8;
-        _newAccount.Password = GeneratePassword.Generate(selectedNumber);
+        _newAccount.Password = passwordEncryptor.Encrypt(GeneratePassword.Generate(selectedNumber)); // шифрование введенного пароля
     }
     #region метод добавления нового аккаунта
     private async void AddAccount() // метод добавления нового аккаунта
@@ -199,6 +199,7 @@
             toastService.ShowError("Не все поля заполнены корректно, также проверьте чтобы пароль содержал не менее 6 символов");
     }
     #endregion
+
     #region метод удаления аккаунта
     private void DeleteAccount(Account account) // метод удаления аккаунта
     {
@@ -207,6 +208,7 @@
         navigationManager.NavigateTo("/PasswordManager", true);
     }
     #endregion
+
     private async void Exit()
     {
         navigationManager.NavigateTo("/Authorization");
@@ -215,10 +217,17 @@
         logger.LogInformation("Очистка sessionStorage!");
         toastService.ShowInfo("Смена пользователя");
     }
+
     private void ChangePasswordUser(int _userId)
     {
         logger.LogInformation("Переход на страницу для смены пароля пользователя {" + _nameUser+"}");
         toastService.ShowInfo("Вы перенаправлены на страницу изменения пароля");
         navigationManager.NavigateTo("/ChangePassword");
+    }
+
+    private void Timer(object sender, EventArgs e)
+    {
+        DateTime now = DateTime.Now;
+
     }
 }
