--- a/CourceProject/Components/Pages/Authorization.razor
+++ b/CourceProject/Components/Pages/Authorization.razor
@@ -27,8 +27,8 @@
                     <InputText @bind-Value="_userAuthorization.Name" class="form-control" placeholder="Имя пользователя" />
                 </div>
                 <div class="form-group">
-                    <label>Фамилия пользователя</label>
-                    <InputText type="password" @bind-Value="_userAuthorization.Password" class="form-control" placeholder="Фамилия" />
+                    <label>Пароль пользователя</label>
+                    <InputText type="password" @bind-Value="_userAuthorization.Password" class="form-control" placeholder="Пароль" />
                 </div>
                 
                 <ValidationSummary />
@@ -48,7 +48,7 @@
     private int? _userId;
     private string? decryptedPassword;
     [SupplyParameterFromForm]
-    private UserAthirization _userAuthorization { get; set; } = new();
+    private UserAuthorization _userAuthorization { get; set; } = new();
     protected override async Task OnInitializedAsync()
     {
         users = await _listUsers.GetUsers();
