--- a/CourceProject/Components/Layout/NavMenu.razor
+++ b/CourceProject/Components/Layout/NavMenu.razor
@@ -39,6 +39,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Profile">
+                <span class="bi bi-person-vcard" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Профиль пользователя
+            </NavLink>
+        </div>
+
 
     </nav>
 </div>
