--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -96,10 +96,10 @@
                             </td>
                             <td></td>
                             <td>
-                        <button style="background:#1b6ec2" class="glow-on-hover" @onclick="(()=>Generate(_newAccount,selectedNumber))">Сгенерировать пароль</button>
+                        <button style="background:#1b6ec2" class="glow-on-hover" @onclick="(()=>Generate(_newAccount,selectedNumberNewPass))">Сгенерировать пароль</button>
                             </td>
                             <td>
-                                <select @bind="selectedNumber" >
+                                <select @bind="selectedNumberNewPass" placeholder="6">
                                     @for (int i = 6; i < 16; i++)
                                     {
                                         <option> @i</option>
@@ -132,6 +132,7 @@
     private bool flag=false;
     private string? xxx="*******";
     private int selectedNumber;
+    private int selectedNumberNewPass;
     private bool isConnected;
     private bool checkedValue;
     private List<Account>  arrAccountsDelete = new List<Account>();
@@ -176,7 +177,7 @@
     {        
         if (selectedNumber == 0)
             selectedNumber = 8;
-        _newAccount.Password = passwordEncryptor.Encrypt(GeneratePassword.Generate(selectedNumber)); // шифрование введенного пароля
+        _newAccount.Password = GeneratePassword.Generate(selectedNumber); // шифрование введенного пароля
     }
     #region метод добавления нового аккаунта
     private async void AddAccount() // метод добавления нового аккаунта
