--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -173,11 +173,11 @@
             StateHasChanged();
         }
     }
-    private void Generate(Account _newAccount, int selectedNumber)
+    private void Generate(Account _newAccount, int selectedNumberNewPass)
     {        
-        if (selectedNumber == 0)
-            selectedNumber = 8;
-        _newAccount.Password = GeneratePassword.Generate(selectedNumber); // шифрование введенного пароля
+        if (selectedNumberNewPass == 0)
+            selectedNumberNewPass = 8;
+        _newAccount.Password = GeneratePassword.Generate(selectedNumberNewPass); // шифрование введенного пароля
     }
     #region метод добавления нового аккаунта
     private async void AddAccount() // метод добавления нового аккаунта
