Добавлена проверка при удалении аккаунта с помощью модального окна

--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -15,6 +15,28 @@
 
     @if (isConnected)
     {
+        @if (confirmation)
+        {
+            <div class="model" tabindex="-1" style="position:relative;   display:flex">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Модальное окно подтверждения удаления </h5>
+                            <button type="button" class="btn btn-close" data-dismiss="modal" aria-label="Close" @onclick=CloseDialog></button>
+                        </div>
+                        
+                            <div>
+                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick=CloseDialog>Отмена</button>
+                                <button type="submit" class="btn btn-success" @onclick="(()=>DeleteAccount(delAccount))">Удалить</button>
+                            </div>
+                    </div>
+                </div>
+            </div>
+
+        }
+
+
+
         if (@_userId == 0)
         {
             toastService.ShowError("Пожалуйста авторизуйтесь!");
@@ -80,7 +102,7 @@
                                         </select>
                                     </td>
                                 <td>
-                            <Button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>DeleteAccount(account))">Удалить</Button>
+                            <button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>Delete(account))">Удалить</button>
                                 </td>
                             </tr>
                         }
@@ -135,8 +157,9 @@
     private int selectedNumberNewPass;
     private bool isConnected;
     private bool checkedValue;
+    private bool confirmation = false; // флаг для подтверждения удаления
     private List<Account>  arrAccountsDelete = new List<Account>();
-
+    private Account delAccount=new();
     protected override async void OnInitialized()
     {
         accounts = await _listAccounts.GetAccounts();
@@ -201,9 +224,16 @@
     }
     #endregion
 
+    private void Delete(Account account)
+    {
+        confirmation = true;
+        delAccount = account;
+    }
+
     #region метод удаления аккаунта
     private void DeleteAccount(Account account) // метод удаления аккаунта
     {
+        confirmation = true;
         _listAccounts.Delete(account);      
         logger.LogInformation("Удален аккаунт {" + account.Source+"}");
         navigationManager.NavigateTo("/PasswordManager", true);
@@ -230,5 +260,9 @@
     {
         DateTime now = DateTime.Now;
 
+    }
+    private void CloseDialog()
+    {
+        confirmation = false;
     }
 }
