Модальное окно не доделано

--- a/CourceProject/Components/Layout/MainLayout.razor
+++ b/CourceProject/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @using Blazored.Toast.Configuration
+@using Blazored.Modal.Services
 
 <div class="page">
     <div class="sidebar">
@@ -37,5 +38,9 @@
                 WarningIcon="fa fa-warning"
                 InfoIcon="fa fa-info-circle">
 </BlazoredToasts>
+
+<BlazoredModal Position="Blazored.Modal.ModalPosition.TopCenter">
+
+</BlazoredModal>
 
 
