--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -1,13 +1,16 @@
 ﻿@using CourceProject.Components.Data
 @using CourceProject.Components.Models
 @using CourceProject.Components.Services
+@using BlazorBootstrap;
+
 @inject IUserRepository _listUsers
 @inject IAccountRepository _listAccounts
-@inject Blazored.SessionStorage.ISessionStorageService localStorage;
-@inject NavigationManager navigationManager;
-@inject IEncryptor passwordEncryptor;
+@inject Blazored.SessionStorage.ISessionStorageService localStorage
+@inject NavigationManager navigationManager
+@inject IEncryptor passwordEncryptor
 @inject IToastService toastService
-@inject ILogger<PasswordManager> logger
+
+@inject ILogger<PasswordManager> logger;
 @page "/PasswordManager"
 
 @rendermode InteractiveServer
@@ -21,7 +24,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Модальное окно подтверждения удаления </h5>
+                            <h5 class="modal-title">Модальное окно подтверждения удаления аккаунта "@delAccount.Source" </h5>
                             <button type="button" class="btn btn-close" data-dismiss="modal" aria-label="Close" @onclick=CloseDialog></button>
                         </div>
                         
@@ -32,7 +35,7 @@
                     </div>
                 </div>
             </div>
-
+          
         }
 
 
@@ -138,14 +141,27 @@
                 </div>
                 <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
         }
+
+    <Modal @ref="modal" title="Modal title" IsVerticallyCentered="true">
+        <BodyTemplate>
+            This is a vertically centered modal.
+        </BodyTemplate>
+        <FooterTemplate>
+            <Button Color="ButtonColor.Secondary" @onclick="OnHideModalClick">Close</Button>
+            <Button Color="ButtonColor.Primary">Save changes</Button>
+        </FooterTemplate>
+    </Modal>
+
+    <Button Color="ButtonColor.Primary" @onclick="OnShowModalClick">Vertically centered modal</Button>
     }
     else
     {
         <p><em>Loading...</em></p>
     }
-
+     
 
 @code {
+    
     private int? _userId;
     private string? _nameUser;
     private IEnumerable<Account> accounts = new List<Account>();
@@ -160,6 +176,11 @@
     private bool confirmation = false; // флаг для подтверждения удаления
     private List<Account>  arrAccountsDelete = new List<Account>();
     private Account delAccount=new();
+
+    private Modal modal=default!;
+    
+    [Inject] ModalService ModalService { get; set; } = default!;
+
     protected override async void OnInitialized()
     {
         accounts = await _listAccounts.GetAccounts();
@@ -226,6 +247,8 @@
 
     private void Delete(Account account)
     {
+
+
         confirmation = true;
         delAccount = account;
     }
@@ -265,4 +288,23 @@
     {
         confirmation = false;
     }
+
+
+
+
+    
+
+    private async Task OnShowModalClick()
+    {
+        await modal?.ShowAsync();
+    }
+
+    private async Task OnHideModalClick()
+    {
+        await modal?.HideAsync();
+    }
+
+
+
+
 }
