--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -9,37 +9,13 @@
 @inject NavigationManager navigationManager
 @inject IEncryptor passwordEncryptor
 @inject IToastService toastService
-
 @inject ILogger<PasswordManager> logger;
 @page "/PasswordManager"
 
 @rendermode InteractiveServer
 
-
     @if (isConnected)
     {
-        @if (confirmation)
-        {
-            <div class="model" tabindex="-1" style="position:relative;   display:flex">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Модальное окно подтверждения удаления аккаунта "@delAccount.Source" </h5>
-                            <button type="button" class="btn btn-close" data-dismiss="modal" aria-label="Close" @onclick=CloseDialog></button>
-                        </div>
-                        
-                            <div>
-                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick=CloseDialog>Отмена</button>
-                                <button type="submit" class="btn btn-success" @onclick="(()=>DeleteAccount(delAccount))">Удалить</button>
-                            </div>
-                    </div>
-                </div>
-            </div>
-          
-        }
-
-
-
         if (@_userId == 0)
         {
             toastService.ShowError("Пожалуйста авторизуйтесь!");
@@ -105,7 +81,8 @@
                                         </select>
                                     </td>
                                 <td>
-                            <button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>Delete(account))">Удалить</button>
+                            <button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>OnShowModalClick(account))">Удалить</button>
+                           
                                 </td>
                             </tr>
                         }
@@ -142,17 +119,16 @@
                 <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
         }
 
-    <Modal @ref="modal" title="Modal title" IsVerticallyCentered="true">
+    <Modal @ref="modal" Title="Подтверждения удаления аккаунта!">
         <BodyTemplate>
-            This is a vertically centered modal.
+            Вы точно хотите удалить аккаунт <b>"@delAccount.Source"</b>?
         </BodyTemplate>
         <FooterTemplate>
-            <Button Color="ButtonColor.Secondary" @onclick="OnHideModalClick">Close</Button>
-            <Button Color="ButtonColor.Primary">Save changes</Button>
+            <Button Color="ButtonColor.Primary" @onclick="OnHideModalClick">Отмена</Button>
+            <Button Color="ButtonColor.Dark" @onclick="(()=>DeleteAccount(delAccount))">Удалить</Button>
         </FooterTemplate>
     </Modal>
-
-    <Button Color="ButtonColor.Primary" @onclick="OnShowModalClick">Vertically centered modal</Button>
+    <Modal @ref="modal1"></Modal>
     }
     else
     {
@@ -161,7 +137,6 @@
      
 
 @code {
-    
     private int? _userId;
     private string? _nameUser;
     private IEnumerable<Account> accounts = new List<Account>();
@@ -173,12 +148,11 @@
     private int selectedNumberNewPass;
     private bool isConnected;
     private bool checkedValue;
-    private bool confirmation = false; // флаг для подтверждения удаления
     private List<Account>  arrAccountsDelete = new List<Account>();
     private Account delAccount=new();
-
     private Modal modal=default!;
-    
+    private Modal modal1 = default!;
+
     [Inject] ModalService ModalService { get; set; } = default!;
 
     protected override async void OnInitialized()
@@ -195,12 +169,13 @@
     #region метод изменения пароля
     private async void Change(Account account, int selectedNumber) // метод изменения пароля
     {
-        flag = false;
-        Generate(account, selectedNumber);
-        ShowPassword(account);
-        await _listAccounts.UpdateAccount(account);
-        logger.LogInformation("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
-        toastService.ShowInfo("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
+        await modal1.ShowAsync<ModalWindow>("ksdncvlknvl;nsdvk;nd;");
+        //flag = false;
+        //Generate(account, selectedNumber);
+        //ShowPassword(account);
+        //await _listAccounts.UpdateAccount(account);
+        //logger.LogInformation("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
+        //toastService.ShowInfo("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
     }
     #endregion
     private async Task ReadLocalStorage()
@@ -217,8 +192,8 @@
             StateHasChanged();
         }
     }
-    private void Generate(Account _newAccount, int selectedNumberNewPass)
-    {        
+    private void  Generate(Account _newAccount, int selectedNumberNewPass)
+    {       
         if (selectedNumberNewPass == 0)
             selectedNumberNewPass = 8;
         _newAccount.Password = GeneratePassword.Generate(selectedNumberNewPass); // шифрование введенного пароля
@@ -245,20 +220,12 @@
     }
     #endregion
 
-    private void Delete(Account account)
-    {
-
-
-        confirmation = true;
-        delAccount = account;
-    }
 
     #region метод удаления аккаунта
     private void DeleteAccount(Account account) // метод удаления аккаунта
     {
-        confirmation = true;
         _listAccounts.Delete(account);      
-        logger.LogInformation("Удален аккаунт {" + account.Source+"}");
+        logger.LogInformation("Удален аккаунт {" + account.Source + "пользователя с ID = " + @_userId +  "}");
         navigationManager.NavigateTo("/PasswordManager", true);
     }
     #endregion
@@ -279,32 +246,16 @@
         navigationManager.NavigateTo("/ChangePassword");
     }
 
-    private void Timer(object sender, EventArgs e)
+    private async Task OnShowModalClick(Account account)
     {
-        DateTime now = DateTime.Now;
-
-    }
-    private void CloseDialog()
-    {
-        confirmation = false;
-    }
-
-
-
-
-    
-
-    private async Task OnShowModalClick()
-    {
-        await modal?.ShowAsync();
+        await modal.ShowAsync();
+        delAccount = account;
     }
 
     private async Task OnHideModalClick()
     {
-        await modal?.HideAsync();
+        await modal.HideAsync();
     }
 
-
-
-
+   
 }
