--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -14,112 +14,116 @@
 
 @rendermode InteractiveServer
 
-    @if (isConnected)
+@if (isConnected)
+{
+    if (@_userId == 0)
     {
-        if (@_userId == 0)
-        {
-            toastService.ShowError("Пожалуйста авторизуйтесь!");
-            navigationManager.NavigateTo("/Authorization");
-        }
-        else
-        {
-            <div class="userId" style="color:white; width:350px; background:#42AAFF">
-                <span> Вы вошли под пользователем - "@_nameUser"</span>
-                <br/>
-                <span> userId - "@_userId" </span>
-            </div>
-            <h1 style="color:blueviolet; font-style:oblique" align="center">Менеджер паролей</h1>
-               
-                <br/>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
+        toastService.ShowError("Пожалуйста авторизуйтесь!");
+        navigationManager.NavigateTo("/Authorization");
+    }
+    else
+    {
+        <div class="userId" style="color:white; width:350px; background:#42AAFF">
+            <span> Вы вошли под пользователем - "@_nameUser"</span>
+            <br />
+            <span> userId - "@_userId" </span>
+        </div>
+        <h1 style="color:blueviolet; font-style:oblique" align="center">Менеджер паролей</h1>
+        <br />
+        <div>
+            <InputText style="background:#A5A5A5; height:35px; width:300px;" class="glow-on-hover" @bind-Value=@searchName placeholder="поиск по наименованию" />
+            <button style="background:#18db66; height:35px" class="glow-on-hover" @onclick="(()=>Search(searchName))">Найти</button>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
             <button style="background:#18db66; width:500px; font-size:20px" class="glow-on-hover" @onclick="(()=>ChangePasswordUser((int)_userId!))"> Изменить пароль пользователя "@_nameUser" </button>
-                </div>
-                <h2 style="color:blueviolet; font-style:oblique">Список аккаунтов:</h2>
-                <table class="table_dark">
-                    <thead>
-                        <tr>
-                            <th>Ресурс</th>
-                            <th>Логин</th>
-                            <th>Пароль</th>
-                            <th>Кнопка пароля</th>
-                            <th>Смена пароля рандомно</th>
-                            <th>Длина смены пароля</th>
-                            <th>Удаление</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (Account account in accounts)
+        </div>
+        <h2 style="color:blueviolet; font-style:oblique">Список аккаунтов:</h2>
+        <table class="table_dark">
+            <thead>
+                <tr>
+                    <th>Ресурс</th>
+                    <th>Логин</th>
+                    <th>Пароль</th>
+                    <th>Кнопка пароля</th>
+                    <th>Смена пароля рандомно</th>
+                    <th>Длина смены пароля</th>
+                    <th>Удаление</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Account account in accounts)
+                {
+                    <tr>
+                        <td>
+                            @account.Source
+                        </td>
+                        <td>@account.Login</td>
+                        @if (flag && accountId == account.Id)
                         {
-                            <tr>
-                                <td>
-                                    @account.Source
-                                </td>
-                                <td>@account.Login</td>
-                                @if (flag && accountId == account.Id)
-                                {                                    
-                                   <td>@passwordEncryptor.Decrypt(account.Password)</td>
-                                    <td>
-                                        <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Скрыть пароль</button>
-                                    </td>
-                                }
-                                else
-                                {
-                                    <td>@xxx</td>
-                                    <td>
-                                        <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
-                                    </td>
-                                }
-                                <td>
-                                    <button style="background:#1b6ec2" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
-                                </td>
-                                    <td>
-                                        <select @bind="selectedNumber" placeholder="6">
-                                            @for (int i = 6; i < 16; i++)
-                                            {
-                                                <option> @i</option>
-                                            }
-                                        </select>
-                                    </td>
-                                <td>
-                            <button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>OnShowModalClick(account))">Удалить</button>
-                           
-                                </td>
-                            </tr>
+                            <td>@passwordEncryptor.Decrypt(account.Password)</td>
+                            <td>
+                                <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Скрыть пароль</button>
+                            </td>
                         }
-                        <tr>
+                        else
+                        {
+                            <td>@xxx</td>
                             <td>
-                                <InputText @bind-Value=@_newAccount.Source  placeholder="введите новый ресурс "/>
+                                <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
                             </td>
-                            <td>
-                                <InputText @bind-Value=@_newAccount.Login placeholder="введите логин" />
-                            </td>
-                            <td>
-                                <InputText @bind-Value=@_newAccount.Password placeholder="введите пароль" />
-                            </td>
-                            <td></td>
-                            <td>
-                        <button style="background:#1b6ec2" class="glow-on-hover" @onclick="(()=>Generate(_newAccount,selectedNumberNewPass))">Сгенерировать пароль</button>
-                            </td>
-                            <td>
-                                <select @bind="selectedNumberNewPass" placeholder="6">
-                                    @for (int i = 6; i < 16; i++)
-                                    {
-                                        <option> @i</option>
-                                    }
-                                </select>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <br />
-                <br />
-                <div>
-            <button style="background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
-                </div>
-                <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
-        }
+                        }
+                        <td>
+                            <button style="background:#1b6ec2" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
+                        </td>
+                        <td>
+                            <select @bind="selectedNumber" placeholder="6">
+                                @for (int i = 6; i < 16; i++)
+                                {
+                                    <option value="@account.Id"> @i</option>
+                                }
+                            </select>
+                        </td>
+                        <td>
+                            <button style="background:red" class="glow-on-hover" id="delete" @onclick="(()=>OnShowModalClick(account))">Удалить</button>
 
-    <Modal @ref="modal" Title="Подтверждения удаления аккаунта!">
+                        </td>
+                    </tr>
+                   
+                }
+                <tr>
+                    <td>
+                        <InputText @bind-Value=@_newAccount.Source placeholder="введите новый ресурс " />
+                    </td>
+                    <td>
+                        <InputText @bind-Value=@_newAccount.Login placeholder="введите логин" />
+                    </td>
+                    <td>
+                        <InputText @bind-Value=@_newAccount.Password placeholder="введите пароль" />
+                    </td>
+                    <td></td>
+                    <td>
+                        <button style="background:#1b6ec2" class="glow-on-hover" @onclick="(()=>Generate(_newAccount,selectedNumberNewPass))">Сгенерировать пароль</button>
+                    </td>
+                    <td>
+                        <select @bind="selectedNumberNewPass" placeholder="6">
+                            @for (int i = 6; i < 16; i++)
+                            {
+
+                                <option> @i</option>
+                            }
+                        </select>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <br />
+        <br />
+        <div>
+            <button style="background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
+        </div>
+        <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
+    }
+    <Modal @ref="modalWindowDeleteAccount" Title="Подтверждения удаления аккаунта!">
         <BodyTemplate>
             Вы точно хотите удалить аккаунт <b>"@delAccount.Source"</b>?
         </BodyTemplate>
@@ -129,12 +133,12 @@
         </FooterTemplate>
     </Modal>
     <Modal @ref="modal1"></Modal>
-    }
-    else
-    {
-        <p><em>Loading...</em></p>
-    }
-     
+}
+else
+{
+    <p><em>Loading...</em></p>
+}
+
 
 @code {
     private int? _userId;
@@ -143,16 +147,16 @@
     private Account _newAccount = new();
     private int? accountId;
     private bool flag=false;
+    private string? searchName;
     private string? xxx="*******";
     private int selectedNumber;
     private int selectedNumberNewPass;
     private bool isConnected;
     private bool checkedValue;
-    private List<Account>  arrAccountsDelete = new List<Account>();
+    private List<Account> arrAccountsDelete = new List<Account>();
     private Account delAccount=new();
-    private Modal modal=default!;
+    private Modal modalWindowDeleteAccount=default!;
     private Modal modal1 = default!;
-
     [Inject] ModalService ModalService { get; set; } = default!;
 
     protected override async void OnInitialized()
@@ -169,13 +173,13 @@
     #region метод изменения пароля
     private async void Change(Account account, int selectedNumber) // метод изменения пароля
     {
-        await modal1.ShowAsync<ModalWindow>("ksdncvlknvl;nsdvk;nd;");
-        //flag = false;
-        //Generate(account, selectedNumber);
-        //ShowPassword(account);
-        //await _listAccounts.UpdateAccount(account);
-        //logger.LogInformation("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
-        //toastService.ShowInfo("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
+        flag = false;
+        Generate(account, selectedNumber);
+        account.Password = passwordEncryptor.Encrypt(account.Password);
+        ShowPassword(account);
+        await _listAccounts.UpdateAccount(account);
+        logger.LogInformation("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
+        toastService.ShowInfo("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
     }
     #endregion
     private async Task ReadLocalStorage()
@@ -220,7 +224,6 @@
     }
     #endregion
 
-
     #region метод удаления аккаунта
     private void DeleteAccount(Account account) // метод удаления аккаунта
     {
@@ -248,14 +251,25 @@
 
     private async Task OnShowModalClick(Account account)
     {
-        await modal.ShowAsync();
+        await modalWindowDeleteAccount.ShowAsync();
         delAccount = account;
     }
 
     private async Task OnHideModalClick()
     {
-        await modal.HideAsync();
+        await modalWindowDeleteAccount.HideAsync();
     }
-
-   
+    #region метод поиска аккаунта
+    private async Task Search(string? searchName)
+    {
+        if (searchName == null || searchName == "")
+        {
+            accounts = accounts.Where(a => a.UserId == _userId);
+        }
+        else
+        {
+            accounts = accounts.Where(r => r.Source!.Contains(searchName));
+        }
+    }
+   #endregion
 }
