--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -73,7 +73,7 @@
                             </td>
                         }
                         <td>
-                            <button style="background:#1b6ec2" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
+                            <button style="background:#1b6ec2; height:60px" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
                         </td>
                         <td>
                             <select @bind="selectedNumber" placeholder="6">
